<resources>
    <string name="app_name">Sorbet</string>

    <!-- Common -->
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>

    <!-- Bottom navigation menu -->
    <string name="home">Home</string>
    <string name="android">Android</string>
    <string name="gift">Gift</string>
    <string name="chat">Chat</string>

    <!-- Toolbar -->
    <string name="previous_screen_button">Previous screen button</string>
    <string name="open_menu_button">Open menu button</string>
    <string name="add_person_button">Add person button</string>
    <string name="close_button">Close button</string>
    <string name="search_button">Search button</string>
    <string name="info_button">Info button</string>

    <!-- Sign In -->
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in">Please, sign in.</string>

    <!-- Sign Out -->
    <string name="you_can_sign_out">You can sign out below.</string>

    <!-- Sorbet Activity -->
    <string name="press_back_once_more">Press back once more to exit</string>

    <!-- Chat room list -->
    <string name="create_new_chat">Create new chat</string>
    <string name="title">Chat rooms</string>
    <string name="no_chat_rooms_yet">No chat rooms yet.</string>

    <!-- Chat room -->
    <string name="message">Type your message</string>
    <string name="send_message_button">Send message button</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_chat_room">Delete current Chat Room?</string>

    <!-- Chat room edit -->
    <string name="group_name">GroupName</string>

</resources>
