<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/stubFragmentOne"
        android:title="@string/gift"
        android:icon="@drawable/ic_card_giftcard_24px" />

    <item android:id="@+id/stubFragmentTwo"
        android:title="@string/android"
        android:icon="@drawable/ic_android_24px" />

    <item android:id="@+id/chatRoomListFragment"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat_24px" />

    <item android:id="@+id/stubFragmentThree"
        android:title="@string/home"
        android:icon="@drawable/ic_account_balance_24px" />

    <item android:id="@+id/signOutFragment"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_exit_24px" />
</menu>
