<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="chatRoomEditVM"
            type="com.gmail.danylooliinyk.android.sorbet.ui.chat.chatRoomEdit.viewmodel.ChatRoomEditVMDefault" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"

            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/toolbar_icon_size"
                android:layout_height="@dimen/toolbar_icon_size"
                android:layout_marginStart="@dimen/default_margin"
                android:contentDescription="@string/previous_screen_button"
                android:src="@drawable/ic_arrow_back"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:ellipsize="end"
                android:maxWidth="230dp"
                android:maxLines="1"
                android:text="Edit Group"
                android:textColor="@color/snow"
                android:textSize="@dimen/big_text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civGroupPic"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"

                app:civ_border_color="@color/gray_middle_darker"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                tools:src="@drawable/ic_identity_24px" />

            <TextView
                android:id="@+id/tvGroupNameHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/group_name"
                android:textSize="@dimen/small_text"
                app:layout_constraintBottom_toTopOf="@id/etGroupName"
                app:layout_constraintStart_toEndOf="@id/civGroupPic"
                app:layout_constraintTop_toTopOf="@id/civGroupPic"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/etGroupName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:maxLines="1"
                android:minHeight="10dp"
                android:text="@={chatRoomEditVM.chatRoomNameEdit}"
                app:layout_constraintBottom_toBottomOf="@id/civGroupPic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/civGroupPic"
                app:layout_constraintTop_toBottomOf="@id/tvGroupNameHint"

                tools:text="Some good group name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabConfirmChanges"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/create_new_chat"
            android:src="@drawable/ic_check_24px"
            android:visibility="invisible"

            app:backgroundTint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="12dp" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
